// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entities/routeEdit/simplifyPath test suite should simplify big json route 1`] = `
Array [
  Object {
    "elevation": 1113.82,
    "lat": 47.0334150922,
    "lng": 8.7705803197,
    "time": "2020-06-26T07:07:37Z",
  },
  Object {
    "elevation": 1098.92,
    "lat": 47.0333524793,
    "lng": 8.7714082841,
    "time": "2020-06-26T07:10:30Z",
  },
  Object {
    "elevation": 1094.6,
    "lat": 47.0340542961,
    "lng": 8.7718008086,
    "time": "2020-06-26T07:10:46Z",
  },
  Object {
    "elevation": 1092.2,
    "lat": 47.0342804398,
    "lng": 8.7726338021,
    "time": "2020-06-26T07:10:55Z",
  },
  Object {
    "elevation": 1088.83,
    "lat": 47.0353917964,
    "lng": 8.7738854717,
    "time": "2020-06-26T07:11:17Z",
  },
  Object {
    "elevation": 1087.87,
    "lat": 47.035758337,
    "lng": 8.7740432192,
    "time": "2020-06-26T07:11:22Z",
  },
  Object {
    "elevation": 1084.99,
    "lat": 47.036584625,
    "lng": 8.7738238648,
    "time": "2020-06-26T07:11:32Z",
  },
  Object {
    "elevation": 1084.02,
    "lat": 47.0368882176,
    "lng": 8.7740431353,
    "time": "2020-06-26T07:11:36Z",
  },
  Object {
    "elevation": 1076.81,
    "lat": 47.0374713466,
    "lng": 8.7771199644,
    "time": "2020-06-26T07:12:01Z",
  },
  Object {
    "elevation": 1078.74,
    "lat": 47.0373486355,
    "lng": 8.7774165161,
    "time": "2020-06-26T07:12:46Z",
  },
  Object {
    "elevation": 1078.74,
    "lat": 47.0375512261,
    "lng": 8.7776587531,
    "time": "2020-06-26T07:13:02Z",
  },
  Object {
    "elevation": 1080.18,
    "lat": 47.0369816758,
    "lng": 8.7768867798,
    "time": "2020-06-26T07:14:31Z",
  },
  Object {
    "elevation": 1090.27,
    "lat": 47.0368033927,
    "lng": 8.7756224535,
    "time": "2020-06-26T07:14:58Z",
  },
  Object {
    "elevation": 1092.2,
    "lat": 47.0364275482,
    "lng": 8.7751218863,
    "time": "2020-06-26T07:15:13Z",
  },
  Object {
    "elevation": 1115.75,
    "lat": 47.0345387701,
    "lng": 8.7739230227,
    "time": "2020-06-26T07:16:25Z",
  },
  Object {
    "elevation": 1128.73,
    "lat": 47.0334866736,
    "lng": 8.7737481762,
    "time": "2020-06-26T07:17:04Z",
  },
  Object {
    "elevation": 1140.26,
    "lat": 47.0333248191,
    "lng": 8.7752502132,
    "time": "2020-06-26T07:17:45Z",
  },
  Object {
    "elevation": 1156.12,
    "lat": 47.0319266338,
    "lng": 8.7744505797,
    "time": "2020-06-26T07:18:42Z",
  },
  Object {
    "elevation": 1167.66,
    "lat": 47.0308059733,
    "lng": 8.7733547296,
    "time": "2020-06-26T07:19:33Z",
  },
  Object {
    "elevation": 1176.31,
    "lat": 47.0295122266,
    "lng": 8.7729670666,
    "time": "2020-06-26T07:20:22Z",
  },
  Object {
    "elevation": 1185.92,
    "lat": 47.0283494052,
    "lng": 8.7721737195,
    "time": "2020-06-26T07:21:09Z",
  },
  Object {
    "elevation": 1208.51,
    "lat": 47.0258520171,
    "lng": 8.7717398722,
    "time": "2020-06-26T07:22:41Z",
  },
  Object {
    "elevation": 1234.95,
    "lat": 47.023947062,
    "lng": 8.7728544138,
    "time": "2020-06-26T07:24:05Z",
  },
  Object {
    "elevation": 1243.12,
    "lat": 47.0231812075,
    "lng": 8.7734538037,
    "time": "2020-06-26T07:24:40Z",
  },
  Object {
    "elevation": 1246.97,
    "lat": 47.022963278,
    "lng": 8.7739284709,
    "time": "2020-06-26T07:24:55Z",
  },
  Object {
    "elevation": 1267.64,
    "lat": 47.023853017,
    "lng": 8.7752128299,
    "time": "2020-06-26T07:25:56Z",
  },
  Object {
    "elevation": 1278.69,
    "lat": 47.0232776832,
    "lng": 8.7757420633,
    "time": "2020-06-26T07:26:30Z",
  },
  Object {
    "elevation": 1285.42,
    "lat": 47.0228652097,
    "lng": 8.7756279018,
    "time": "2020-06-26T07:26:50Z",
  },
  Object {
    "elevation": 1297.44,
    "lat": 47.0222840086,
    "lng": 8.7762402836,
    "time": "2020-06-26T07:27:26Z",
  },
  Object {
    "elevation": 1324.83,
    "lat": 47.023672387,
    "lng": 8.7776067015,
    "time": "2020-06-26T07:28:47Z",
  },
  Object {
    "elevation": 1354.15,
    "lat": 47.0219902229,
    "lng": 8.7783183251,
    "time": "2020-06-26T07:31:18Z",
  },
  Object {
    "elevation": 1382.51,
    "lat": 47.0201682486,
    "lng": 8.7784927525,
    "time": "2020-06-26T07:32:42Z",
  },
  Object {
    "elevation": 1394.53,
    "lat": 47.0195042342,
    "lng": 8.778783856,
    "time": "2020-06-26T07:33:17Z",
  },
  Object {
    "elevation": 1417.12,
    "lat": 47.0182497147,
    "lng": 8.7798959669,
    "time": "2020-06-26T07:34:28Z",
  },
  Object {
    "elevation": 1424.81,
    "lat": 47.0175868738,
    "lng": 8.7798853219,
    "time": "2020-06-26T07:35:02Z",
  },
  Object {
    "elevation": 1431.54,
    "lat": 47.0169679541,
    "lng": 8.7801880762,
    "time": "2020-06-26T07:35:24Z",
  },
  Object {
    "elevation": 1458.46,
    "lat": 47.014956465,
    "lng": 8.782497542,
    "time": "2020-06-26T07:36:53Z",
  },
  Object {
    "elevation": 1470.95,
    "lat": 47.0138335414,
    "lng": 8.7829174753,
    "time": "2020-06-26T07:37:34Z",
  },
  Object {
    "elevation": 1476.72,
    "lat": 47.0125287306,
    "lng": 8.7829961814,
    "time": "2020-06-26T07:38:19Z",
  },
  Object {
    "elevation": 1477.68,
    "lat": 47.0127133839,
    "lng": 8.7834855169,
    "time": "2020-06-26T08:08:34Z",
  },
  Object {
    "elevation": 1487.3,
    "lat": 47.0123631041,
    "lng": 8.7830302957,
    "time": "2020-06-26T08:10:04Z",
  },
  Object {
    "elevation": 1469.51,
    "lat": 47.0103483461,
    "lng": 8.7846536189,
    "time": "2020-06-26T08:10:42Z",
  },
  Object {
    "elevation": 1466.15,
    "lat": 47.0099937078,
    "lng": 8.7846992165,
    "time": "2020-06-26T08:10:46Z",
  },
  Object {
    "elevation": 1455.09,
    "lat": 47.0088488236,
    "lng": 8.78413436,
    "time": "2020-06-26T08:10:57Z",
  },
  Object {
    "elevation": 1453.17,
    "lat": 47.0085991267,
    "lng": 8.7842631061,
    "time": "2020-06-26T08:11:00Z",
  },
  Object {
    "elevation": 1459.42,
    "lat": 47.0083156507,
    "lng": 8.7847951055,
    "time": "2020-06-26T08:11:08Z",
  },
  Object {
    "elevation": 1464.23,
    "lat": 47.008374827,
    "lng": 8.7852925714,
    "time": "2020-06-26T08:11:16Z",
  },
  Object {
    "elevation": 1477.2,
    "lat": 47.0091822557,
    "lng": 8.7861168478,
    "time": "2020-06-26T08:11:49Z",
  },
  Object {
    "elevation": 1479.61,
    "lat": 47.0092844311,
    "lng": 8.7865234539,
    "time": "2020-06-26T08:12:01Z",
  },
  Object {
    "elevation": 1489.7,
    "lat": 47.0083156507,
    "lng": 8.7866383698,
    "time": "2020-06-26T08:12:40Z",
  },
  Object {
    "elevation": 1496.43,
    "lat": 47.0076920372,
    "lng": 8.7863735016,
    "time": "2020-06-26T08:13:05Z",
  },
  Object {
    "elevation": 1504.12,
    "lat": 47.0073387399,
    "lng": 8.7870381866,
    "time": "2020-06-26T08:13:32Z",
  },
  Object {
    "elevation": 1507,
    "lat": 47.0069462992,
    "lng": 8.7870512623,
    "time": "2020-06-26T08:13:47Z",
  },
  Object {
    "elevation": 1532,
    "lat": 47.0074136741,
    "lng": 8.7901715934,
    "time": "2020-06-26T08:15:12Z",
  },
  Object {
    "elevation": 1561.8,
    "lat": 47.0047518332,
    "lng": 8.7886750046,
    "time": "2020-06-26T08:17:11Z",
  },
  Object {
    "elevation": 1565.16,
    "lat": 47.0041050017,
    "lng": 8.7880170252,
    "time": "2020-06-26T08:17:37Z",
  },
  Object {
    "elevation": 1569.49,
    "lat": 47.0040573087,
    "lng": 8.7873494066,
    "time": "2020-06-26T08:17:53Z",
  },
  Object {
    "elevation": 1575.26,
    "lat": 47.0035183523,
    "lng": 8.7871351652,
    "time": "2020-06-26T08:18:13Z",
  },
  Object {
    "elevation": 1577.66,
    "lat": 47.0032942202,
    "lng": 8.7866723165,
    "time": "2020-06-26T08:18:27Z",
  },
  Object {
    "elevation": 1585.35,
    "lat": 47.002554182,
    "lng": 8.7861403171,
    "time": "2020-06-26T08:19:00Z",
  },
  Object {
    "elevation": 1595.45,
    "lat": 47.0014197752,
    "lng": 8.7859475333,
    "time": "2020-06-26T08:19:40Z",
  },
  Object {
    "elevation": 1604.1,
    "lat": 47.0002007112,
    "lng": 8.784694355,
    "time": "2020-06-26T08:20:28Z",
  },
  Object {
    "elevation": 1606.02,
    "lat": 47.0003998652,
    "lng": 8.7839972321,
    "time": "2020-06-26T08:20:44Z",
  },
  Object {
    "elevation": 1606.98,
    "lat": 46.9996242039,
    "lng": 8.782966258,
    "time": "2020-06-26T08:21:15Z",
  },
  Object {
    "elevation": 1610.83,
    "lat": 46.9995559752,
    "lng": 8.7820782792,
    "time": "2020-06-26T08:21:33Z",
  },
  Object {
    "elevation": 1614.19,
    "lat": 46.9992068689,
    "lng": 8.7817430031,
    "time": "2020-06-26T08:21:46Z",
  },
  Object {
    "elevation": 1620.44,
    "lat": 46.9989976566,
    "lng": 8.7809775677,
    "time": "2020-06-26T08:22:07Z",
  },
  Object {
    "elevation": 1640.63,
    "lat": 46.9992041867,
    "lng": 8.7781407963,
    "time": "2020-06-26T08:23:26Z",
  },
  Object {
    "elevation": 1651.2,
    "lat": 46.9980849512,
    "lng": 8.7773996685,
    "time": "2020-06-26T08:24:14Z",
  },
  Object {
    "elevation": 1659.85,
    "lat": 46.9976202585,
    "lng": 8.7760885712,
    "time": "2020-06-26T08:25:13Z",
  },
  Object {
    "elevation": 1662.74,
    "lat": 46.9972035941,
    "lng": 8.7765603885,
    "time": "2020-06-26T08:26:34Z",
  },
  Object {
    "elevation": 1687.25,
    "lat": 46.9978328235,
    "lng": 8.7791184615,
    "time": "2020-06-26T08:27:42Z",
  },
  Object {
    "elevation": 1691.58,
    "lat": 46.9976693764,
    "lng": 8.7794259936,
    "time": "2020-06-26T08:27:50Z",
  },
  Object {
    "elevation": 1696.38,
    "lat": 46.9972113054,
    "lng": 8.7795374729,
    "time": "2020-06-26T08:28:06Z",
  },
  Object {
    "elevation": 1709.36,
    "lat": 46.9967005122,
    "lng": 8.7789695151,
    "time": "2020-06-26T08:28:35Z",
  },
  Object {
    "elevation": 1729.07,
    "lat": 46.9958365895,
    "lng": 8.7785225082,
    "time": "2020-06-26T08:29:14Z",
  },
  Object {
    "elevation": 1734.84,
    "lat": 46.995624695,
    "lng": 8.7788682617,
    "time": "2020-06-26T08:29:30Z",
  },
  Object {
    "elevation": 1752.14,
    "lat": 46.9955455698,
    "lng": 8.7813197169,
    "time": "2020-06-26T08:31:02Z",
  },
  Object {
    "elevation": 1791.07,
    "lat": 46.9966446888,
    "lng": 8.7883996591,
    "time": "2020-06-26T08:33:16Z",
  },
  Object {
    "elevation": 1811.74,
    "lat": 46.9966320321,
    "lng": 8.7902945559,
    "time": "2020-06-26T08:34:49Z",
  },
  Object {
    "elevation": 1800.21,
    "lat": 46.9966368098,
    "lng": 8.7884374615,
    "time": "2020-06-26T08:52:36Z",
  },
  Object {
    "elevation": 1765.12,
    "lat": 46.9955635909,
    "lng": 8.7816203758,
    "time": "2020-06-26T08:53:47Z",
  },
  Object {
    "elevation": 1737.72,
    "lat": 46.9956495054,
    "lng": 8.7785799243,
    "time": "2020-06-26T09:24:43Z",
  },
  Object {
    "elevation": 1716.09,
    "lat": 46.9967014343,
    "lng": 8.7789902184,
    "time": "2020-06-26T09:25:10Z",
  },
  Object {
    "elevation": 1704.07,
    "lat": 46.9971474353,
    "lng": 8.7795278337,
    "time": "2020-06-26T09:25:26Z",
  },
  Object {
    "elevation": 1695.42,
    "lat": 46.9977682829,
    "lng": 8.7792829145,
    "time": "2020-06-26T09:25:38Z",
  },
  Object {
    "elevation": 1667.54,
    "lat": 46.9971791189,
    "lng": 8.7767673377,
    "time": "2020-06-26T09:26:05Z",
  },
  Object {
    "elevation": 1670.91,
    "lat": 46.997826118,
    "lng": 8.7758189254,
    "time": "2020-06-26T09:27:28Z",
  },
  Object {
    "elevation": 1666.58,
    "lat": 46.9976770878,
    "lng": 8.7763004657,
    "time": "2020-06-26T09:27:37Z",
  },
  Object {
    "elevation": 1658.41,
    "lat": 46.9980515074,
    "lng": 8.7773446832,
    "time": "2020-06-26T09:27:53Z",
  },
  Object {
    "elevation": 1647.36,
    "lat": 46.9991899375,
    "lng": 8.7781285588,
    "time": "2020-06-26T09:28:07Z",
  },
  Object {
    "elevation": 1648.8,
    "lat": 46.9999691192,
    "lng": 8.7783194985,
    "time": "2020-06-26T09:28:29Z",
  },
  Object {
    "elevation": 1645.91,
    "lat": 47.0005060639,
    "lng": 8.7777771056,
    "time": "2020-06-26T09:29:53Z",
  },
  Object {
    "elevation": 1642.55,
    "lat": 47.0010733511,
    "lng": 8.7778004073,
    "time": "2020-06-26T09:30:08Z",
  },
  Object {
    "elevation": 1645.91,
    "lat": 47.0021365117,
    "lng": 8.7768840138,
    "time": "2020-06-26T09:30:50Z",
  },
  Object {
    "elevation": 1651.68,
    "lat": 47.0028376579,
    "lng": 8.7754399795,
    "time": "2020-06-26T09:31:34Z",
  },
  Object {
    "elevation": 1664.18,
    "lat": 47.0030970778,
    "lng": 8.7737021595,
    "time": "2020-06-26T09:32:46Z",
  },
  Object {
    "elevation": 1682.44,
    "lat": 47.0025240909,
    "lng": 8.7706124224,
    "time": "2020-06-26T09:34:08Z",
  },
  Object {
    "elevation": 1681.96,
    "lat": 47.0026126876,
    "lng": 8.7699689437,
    "time": "2020-06-26T09:34:19Z",
  },
  Object {
    "elevation": 1696.86,
    "lat": 47.0030027814,
    "lng": 8.7687146757,
    "time": "2020-06-26T09:34:50Z",
  },
  Object {
    "elevation": 1706.96,
    "lat": 47.0030339621,
    "lng": 8.7677361723,
    "time": "2020-06-26T09:35:18Z",
  },
  Object {
    "elevation": 1712.25,
    "lat": 47.0041439775,
    "lng": 8.7641650625,
    "time": "2020-06-26T09:38:45Z",
  },
  Object {
    "elevation": 1714.17,
    "lat": 47.0044696983,
    "lng": 8.7637818418,
    "time": "2020-06-26T09:38:58Z",
  },
  Object {
    "elevation": 1709.84,
    "lat": 47.0048736222,
    "lng": 8.7640711013,
    "time": "2020-06-26T09:39:11Z",
  },
  Object {
    "elevation": 1677.64,
    "lat": 47.0045259409,
    "lng": 8.7614374235,
    "time": "2020-06-26T09:40:09Z",
  },
  Object {
    "elevation": 1671.39,
    "lat": 47.0047825947,
    "lng": 8.7616240047,
    "time": "2020-06-26T09:40:18Z",
  },
  Object {
    "elevation": 1667.54,
    "lat": 47.0049408451,
    "lng": 8.7614250183,
    "time": "2020-06-26T09:40:22Z",
  },
  Object {
    "elevation": 1647.36,
    "lat": 47.0047791582,
    "lng": 8.7596405949,
    "time": "2020-06-26T09:40:51Z",
  },
  Object {
    "elevation": 1639.67,
    "lat": 47.0052356366,
    "lng": 8.7594467215,
    "time": "2020-06-26T09:41:08Z",
  },
  Object {
    "elevation": 1626.21,
    "lat": 47.0055637043,
    "lng": 8.7602220476,
    "time": "2020-06-26T09:41:34Z",
  },
  Object {
    "elevation": 1617.07,
    "lat": 47.0056898519,
    "lng": 8.7595770601,
    "time": "2020-06-26T09:41:42Z",
  },
  Object {
    "elevation": 1594,
    "lat": 47.0052641351,
    "lng": 8.7575960811,
    "time": "2020-06-26T09:42:05Z",
  },
  Object {
    "elevation": 1564.2,
    "lat": 47.0038380381,
    "lng": 8.755794391,
    "time": "2020-06-26T09:45:17Z",
  },
  Object {
    "elevation": 1533.44,
    "lat": 47.0037053525,
    "lng": 8.7525821105,
    "time": "2020-06-26T09:47:13Z",
  },
  Object {
    "elevation": 1535.84,
    "lat": 47.0040716417,
    "lng": 8.7515945546,
    "time": "2020-06-26T09:47:25Z",
  },
  Object {
    "elevation": 1535.36,
    "lat": 47.0044242684,
    "lng": 8.7513671536,
    "time": "2020-06-26T09:47:36Z",
  },
  Object {
    "elevation": 1506.52,
    "lat": 47.0056000818,
    "lng": 8.7482001353,
    "time": "2020-06-26T09:49:01Z",
  },
  Object {
    "elevation": 1501.72,
    "lat": 47.0063342527,
    "lng": 8.7470167782,
    "time": "2020-06-26T09:49:42Z",
  },
  Object {
    "elevation": 1510.85,
    "lat": 47.0065877214,
    "lng": 8.7456833012,
    "time": "2020-06-26T09:51:13Z",
  },
  Object {
    "elevation": 1523.35,
    "lat": 47.0077165123,
    "lng": 8.7431168463,
    "time": "2020-06-26T09:52:23Z",
  },
  Object {
    "elevation": 1513.25,
    "lat": 47.0085858833,
    "lng": 8.7419769075,
    "time": "2020-06-26T09:52:48Z",
  },
  Object {
    "elevation": 1479.13,
    "lat": 47.0092364866,
    "lng": 8.7393799424,
    "time": "2020-06-26T09:55:21Z",
  },
  Object {
    "elevation": 1457.02,
    "lat": 47.0094108302,
    "lng": 8.737359317,
    "time": "2020-06-26T09:55:50Z",
  },
  Object {
    "elevation": 1454.13,
    "lat": 47.0093441103,
    "lng": 8.7371591572,
    "time": "2020-06-26T09:55:54Z",
  },
  Object {
    "elevation": 1451.73,
    "lat": 47.0091857761,
    "lng": 8.7372621708,
    "time": "2020-06-26T09:55:59Z",
  },
]
`;

exports[`entities/routeEdit/simplifyPath test suite should simplify big json route 2`] = `
Array [
  Object {
    "elevation": 1113.82,
    "lat": 47.0334150922,
    "lng": 8.7705803197,
    "time": "2020-06-26T07:07:37Z",
  },
  Object {
    "elevation": 1098.92,
    "lat": 47.0333524793,
    "lng": 8.7714082841,
    "time": "2020-06-26T07:10:30Z",
  },
  Object {
    "elevation": 1095.08,
    "lat": 47.0339519531,
    "lng": 8.7716936879,
    "time": "2020-06-26T07:10:44Z",
  },
  Object {
    "elevation": 1092.2,
    "lat": 47.0342373569,
    "lng": 8.7725586165,
    "time": "2020-06-26T07:10:54Z",
  },
  Object {
    "elevation": 1088.83,
    "lat": 47.0353917964,
    "lng": 8.7738854717,
    "time": "2020-06-26T07:11:17Z",
  },
  Object {
    "elevation": 1087.87,
    "lat": 47.0358379651,
    "lng": 8.7740374357,
    "time": "2020-06-26T07:11:23Z",
  },
  Object {
    "elevation": 1084.99,
    "lat": 47.036584625,
    "lng": 8.7738238648,
    "time": "2020-06-26T07:11:32Z",
  },
  Object {
    "elevation": 1084.02,
    "lat": 47.0368882176,
    "lng": 8.7740431353,
    "time": "2020-06-26T07:11:36Z",
  },
  Object {
    "elevation": 1078.74,
    "lat": 47.0375630446,
    "lng": 8.7776238844,
    "time": "2020-06-26T07:13:00Z",
  },
  Object {
    "elevation": 1080.18,
    "lat": 47.0369816758,
    "lng": 8.7768867798,
    "time": "2020-06-26T07:14:31Z",
  },
  Object {
    "elevation": 1090.27,
    "lat": 47.0368033927,
    "lng": 8.7756224535,
    "time": "2020-06-26T07:14:58Z",
  },
  Object {
    "elevation": 1092.2,
    "lat": 47.0364275482,
    "lng": 8.7751218863,
    "time": "2020-06-26T07:15:13Z",
  },
  Object {
    "elevation": 1114.31,
    "lat": 47.03463885,
    "lng": 8.7739905808,
    "time": "2020-06-26T07:16:21Z",
  },
  Object {
    "elevation": 1128.73,
    "lat": 47.0334866736,
    "lng": 8.7737481762,
    "time": "2020-06-26T07:17:04Z",
  },
  Object {
    "elevation": 1140.26,
    "lat": 47.0333248191,
    "lng": 8.7752502132,
    "time": "2020-06-26T07:17:45Z",
  },
  Object {
    "elevation": 1156.12,
    "lat": 47.0319266338,
    "lng": 8.7744505797,
    "time": "2020-06-26T07:18:42Z",
  },
  Object {
    "elevation": 1167.66,
    "lat": 47.0308059733,
    "lng": 8.7733547296,
    "time": "2020-06-26T07:19:33Z",
  },
  Object {
    "elevation": 1176.31,
    "lat": 47.0295122266,
    "lng": 8.7729670666,
    "time": "2020-06-26T07:20:22Z",
  },
  Object {
    "elevation": 1185.92,
    "lat": 47.0283494052,
    "lng": 8.7721737195,
    "time": "2020-06-26T07:21:09Z",
  },
  Object {
    "elevation": 1208.51,
    "lat": 47.0258520171,
    "lng": 8.7717398722,
    "time": "2020-06-26T07:22:41Z",
  },
  Object {
    "elevation": 1234.95,
    "lat": 47.023947062,
    "lng": 8.7728544138,
    "time": "2020-06-26T07:24:05Z",
  },
  Object {
    "elevation": 1243.12,
    "lat": 47.0231812075,
    "lng": 8.7734538037,
    "time": "2020-06-26T07:24:40Z",
  },
  Object {
    "elevation": 1246.97,
    "lat": 47.022963278,
    "lng": 8.7739284709,
    "time": "2020-06-26T07:24:55Z",
  },
  Object {
    "elevation": 1266.67,
    "lat": 47.0238540228,
    "lng": 8.7751608621,
    "time": "2020-06-26T07:25:54Z",
  },
  Object {
    "elevation": 1275.81,
    "lat": 47.0234433096,
    "lng": 8.7756327633,
    "time": "2020-06-26T07:26:21Z",
  },
  Object {
    "elevation": 1285.42,
    "lat": 47.0228652097,
    "lng": 8.7756279018,
    "time": "2020-06-26T07:26:50Z",
  },
  Object {
    "elevation": 1296.96,
    "lat": 47.0222788118,
    "lng": 8.7762046605,
    "time": "2020-06-26T07:27:25Z",
  },
  Object {
    "elevation": 1314.74,
    "lat": 47.0231618453,
    "lng": 8.7772221398,
    "time": "2020-06-26T07:28:18Z",
  },
  Object {
    "elevation": 1322.91,
    "lat": 47.0236859657,
    "lng": 8.777499916,
    "time": "2020-06-26T07:28:43Z",
  },
  Object {
    "elevation": 1329.16,
    "lat": 47.0234601572,
    "lng": 8.7777290773,
    "time": "2020-06-26T07:29:04Z",
  },
  Object {
    "elevation": 1354.15,
    "lat": 47.0219902229,
    "lng": 8.7783183251,
    "time": "2020-06-26T07:31:18Z",
  },
  Object {
    "elevation": 1382.51,
    "lat": 47.0201682486,
    "lng": 8.7784927525,
    "time": "2020-06-26T07:32:42Z",
  },
  Object {
    "elevation": 1394.53,
    "lat": 47.0195042342,
    "lng": 8.778783856,
    "time": "2020-06-26T07:33:17Z",
  },
  Object {
    "elevation": 1413.76,
    "lat": 47.018445516,
    "lng": 8.779787505,
    "time": "2020-06-26T07:34:07Z",
  },
  Object {
    "elevation": 1431.54,
    "lat": 47.0169679541,
    "lng": 8.7801880762,
    "time": "2020-06-26T07:35:24Z",
  },
  Object {
    "elevation": 1458.46,
    "lat": 47.014956465,
    "lng": 8.782497542,
    "time": "2020-06-26T07:36:53Z",
  },
  Object {
    "elevation": 1470.95,
    "lat": 47.0138335414,
    "lng": 8.7829174753,
    "time": "2020-06-26T07:37:34Z",
  },
  Object {
    "elevation": 1476.72,
    "lat": 47.0125287306,
    "lng": 8.7829961814,
    "time": "2020-06-26T07:38:19Z",
  },
  Object {
    "elevation": 1477.68,
    "lat": 47.0127133839,
    "lng": 8.7834855169,
    "time": "2020-06-26T08:08:34Z",
  },
  Object {
    "elevation": 1487.3,
    "lat": 47.0124739129,
    "lng": 8.7829998694,
    "time": "2020-06-26T08:10:00Z",
  },
  Object {
    "elevation": 1470.95,
    "lat": 47.0104209334,
    "lng": 8.7846195046,
    "time": "2020-06-26T08:10:41Z",
  },
  Object {
    "elevation": 1466.63,
    "lat": 47.0100852381,
    "lng": 8.7847228535,
    "time": "2020-06-26T08:10:45Z",
  },
  Object {
    "elevation": 1453.65,
    "lat": 47.0086757373,
    "lng": 8.7841884233,
    "time": "2020-06-26T08:10:59Z",
  },
  Object {
    "elevation": 1457.98,
    "lat": 47.0083719771,
    "lng": 8.7846102007,
    "time": "2020-06-26T08:11:05Z",
  },
  Object {
    "elevation": 1463.26,
    "lat": 47.008356303,
    "lng": 8.7852243427,
    "time": "2020-06-26T08:11:15Z",
  },
  Object {
    "elevation": 1477.2,
    "lat": 47.0091822557,
    "lng": 8.7861168478,
    "time": "2020-06-26T08:11:49Z",
  },
  Object {
    "elevation": 1479.61,
    "lat": 47.0092844311,
    "lng": 8.7865234539,
    "time": "2020-06-26T08:12:01Z",
  },
  Object {
    "elevation": 1489.7,
    "lat": 47.0083156507,
    "lng": 8.7866383698,
    "time": "2020-06-26T08:12:40Z",
  },
  Object {
    "elevation": 1496.43,
    "lat": 47.0076920372,
    "lng": 8.7863735016,
    "time": "2020-06-26T08:13:05Z",
  },
  Object {
    "elevation": 1504.12,
    "lat": 47.0073387399,
    "lng": 8.7870381866,
    "time": "2020-06-26T08:13:32Z",
  },
  Object {
    "elevation": 1507,
    "lat": 47.0069462992,
    "lng": 8.7870512623,
    "time": "2020-06-26T08:13:47Z",
  },
  Object {
    "elevation": 1509.89,
    "lat": 47.0068532601,
    "lng": 8.7874249276,
    "time": "2020-06-26T08:13:58Z",
  },
  Object {
    "elevation": 1530.56,
    "lat": 47.0074627921,
    "lng": 8.7900910433,
    "time": "2020-06-26T08:15:09Z",
  },
  Object {
    "elevation": 1561.8,
    "lat": 47.0047518332,
    "lng": 8.7886750046,
    "time": "2020-06-26T08:17:11Z",
  },
  Object {
    "elevation": 1565.16,
    "lat": 47.0041050017,
    "lng": 8.7880170252,
    "time": "2020-06-26T08:17:37Z",
  },
  Object {
    "elevation": 1569.49,
    "lat": 47.0040573087,
    "lng": 8.7873494066,
    "time": "2020-06-26T08:17:53Z",
  },
  Object {
    "elevation": 1575.26,
    "lat": 47.0035183523,
    "lng": 8.7871351652,
    "time": "2020-06-26T08:18:13Z",
  },
  Object {
    "elevation": 1577.66,
    "lat": 47.0032942202,
    "lng": 8.7866723165,
    "time": "2020-06-26T08:18:27Z",
  },
  Object {
    "elevation": 1585.35,
    "lat": 47.0025794953,
    "lng": 8.7861502916,
    "time": "2020-06-26T08:18:59Z",
  },
  Object {
    "elevation": 1595.45,
    "lat": 47.0014197752,
    "lng": 8.7859475333,
    "time": "2020-06-26T08:19:40Z",
  },
  Object {
    "elevation": 1604.1,
    "lat": 47.0002007112,
    "lng": 8.784694355,
    "time": "2020-06-26T08:20:28Z",
  },
  Object {
    "elevation": 1606.02,
    "lat": 47.0003998652,
    "lng": 8.7839972321,
    "time": "2020-06-26T08:20:44Z",
  },
  Object {
    "elevation": 1606.98,
    "lat": 46.9996015728,
    "lng": 8.7829158828,
    "time": "2020-06-26T08:21:16Z",
  },
  Object {
    "elevation": 1610.83,
    "lat": 46.9995559752,
    "lng": 8.7820782792,
    "time": "2020-06-26T08:21:33Z",
  },
  Object {
    "elevation": 1614.19,
    "lat": 46.9992068689,
    "lng": 8.7817430031,
    "time": "2020-06-26T08:21:46Z",
  },
  Object {
    "elevation": 1620.44,
    "lat": 46.9989976566,
    "lng": 8.7809775677,
    "time": "2020-06-26T08:22:07Z",
  },
  Object {
    "elevation": 1640.63,
    "lat": 46.9992041867,
    "lng": 8.7781407963,
    "time": "2020-06-26T08:23:26Z",
  },
  Object {
    "elevation": 1651.2,
    "lat": 46.9980849512,
    "lng": 8.7773996685,
    "time": "2020-06-26T08:24:14Z",
  },
  Object {
    "elevation": 1659.85,
    "lat": 46.9976275507,
    "lng": 8.7761721388,
    "time": "2020-06-26T08:24:50Z",
  },
  Object {
    "elevation": 1662.74,
    "lat": 46.9972035941,
    "lng": 8.7765603885,
    "time": "2020-06-26T08:26:34Z",
  },
  Object {
    "elevation": 1687.25,
    "lat": 46.9978328235,
    "lng": 8.7791184615,
    "time": "2020-06-26T08:27:42Z",
  },
  Object {
    "elevation": 1691.58,
    "lat": 46.9976693764,
    "lng": 8.7794259936,
    "time": "2020-06-26T08:27:50Z",
  },
  Object {
    "elevation": 1699.75,
    "lat": 46.997048445,
    "lng": 8.7794549949,
    "time": "2020-06-26T08:28:12Z",
  },
  Object {
    "elevation": 1729.07,
    "lat": 46.9958365895,
    "lng": 8.7785225082,
    "time": "2020-06-26T08:29:14Z",
  },
  Object {
    "elevation": 1734.84,
    "lat": 46.995624695,
    "lng": 8.7788682617,
    "time": "2020-06-26T08:29:30Z",
  },
  Object {
    "elevation": 1752.14,
    "lat": 46.9955455698,
    "lng": 8.7813197169,
    "time": "2020-06-26T08:31:02Z",
  },
  Object {
    "elevation": 1791.07,
    "lat": 46.9966446888,
    "lng": 8.7883996591,
    "time": "2020-06-26T08:33:16Z",
  },
  Object {
    "elevation": 1809.82,
    "lat": 46.9966531545,
    "lng": 8.7902760319,
    "time": "2020-06-26T08:33:58Z",
  },
  Object {
    "elevation": 1800.21,
    "lat": 46.9966368098,
    "lng": 8.7884374615,
    "time": "2020-06-26T08:52:36Z",
  },
  Object {
    "elevation": 1760.79,
    "lat": 46.9955309853,
    "lng": 8.7812241632,
    "time": "2020-06-26T08:53:51Z",
  },
  Object {
    "elevation": 1737.72,
    "lat": 46.9956495054,
    "lng": 8.7785799243,
    "time": "2020-06-26T09:24:43Z",
  },
  Object {
    "elevation": 1712.73,
    "lat": 46.9968038611,
    "lng": 8.7790978421,
    "time": "2020-06-26T09:25:15Z",
  },
  Object {
    "elevation": 1704.07,
    "lat": 46.9971474353,
    "lng": 8.7795278337,
    "time": "2020-06-26T09:25:26Z",
  },
  Object {
    "elevation": 1695.42,
    "lat": 46.9977682829,
    "lng": 8.7792829145,
    "time": "2020-06-26T09:25:38Z",
  },
  Object {
    "elevation": 1668.02,
    "lat": 46.9971930329,
    "lng": 8.776872782,
    "time": "2020-06-26T09:26:04Z",
  },
  Object {
    "elevation": 1667.54,
    "lat": 46.9972577412,
    "lng": 8.7764749769,
    "time": "2020-06-26T09:26:09Z",
  },
  Object {
    "elevation": 1670.91,
    "lat": 46.9978749845,
    "lng": 8.7758419756,
    "time": "2020-06-26T09:27:25Z",
  },
  Object {
    "elevation": 1666.58,
    "lat": 46.9976770878,
    "lng": 8.7763004657,
    "time": "2020-06-26T09:27:37Z",
  },
  Object {
    "elevation": 1658.41,
    "lat": 46.9980515074,
    "lng": 8.7773446832,
    "time": "2020-06-26T09:27:53Z",
  },
  Object {
    "elevation": 1648.32,
    "lat": 46.9990788773,
    "lng": 8.7780587375,
    "time": "2020-06-26T09:28:05Z",
  },
  Object {
    "elevation": 1648.8,
    "lat": 46.9999691192,
    "lng": 8.7783194985,
    "time": "2020-06-26T09:28:29Z",
  },
  Object {
    "elevation": 1646.4,
    "lat": 47.0004670043,
    "lng": 8.7778016645,
    "time": "2020-06-26T09:29:52Z",
  },
  Object {
    "elevation": 1643.51,
    "lat": 47.001037728,
    "lng": 8.7778230384,
    "time": "2020-06-26T09:30:07Z",
  },
  Object {
    "elevation": 1645.91,
    "lat": 47.0021365117,
    "lng": 8.7768840138,
    "time": "2020-06-26T09:30:50Z",
  },
  Object {
    "elevation": 1651.68,
    "lat": 47.0028376579,
    "lng": 8.7754399795,
    "time": "2020-06-26T09:31:34Z",
  },
  Object {
    "elevation": 1664.18,
    "lat": 47.0030970778,
    "lng": 8.7737021595,
    "time": "2020-06-26T09:32:46Z",
  },
  Object {
    "elevation": 1682.44,
    "lat": 47.0025334787,
    "lng": 8.7706801482,
    "time": "2020-06-26T09:34:07Z",
  },
  Object {
    "elevation": 1682.44,
    "lat": 47.0026311278,
    "lng": 8.7698722165,
    "time": "2020-06-26T09:34:21Z",
  },
  Object {
    "elevation": 1712.25,
    "lat": 47.0041439775,
    "lng": 8.7641650625,
    "time": "2020-06-26T09:38:45Z",
  },
  Object {
    "elevation": 1714.17,
    "lat": 47.0044696983,
    "lng": 8.7637818418,
    "time": "2020-06-26T09:38:58Z",
  },
  Object {
    "elevation": 1710.8,
    "lat": 47.0047760569,
    "lng": 8.7640022021,
    "time": "2020-06-26T09:39:07Z",
  },
  Object {
    "elevation": 1677.64,
    "lat": 47.0045259409,
    "lng": 8.7614374235,
    "time": "2020-06-26T09:40:09Z",
  },
  Object {
    "elevation": 1668.99,
    "lat": 47.004868174,
    "lng": 8.7615421973,
    "time": "2020-06-26T09:40:20Z",
  },
  Object {
    "elevation": 1666.58,
    "lat": 47.0049462095,
    "lng": 8.7613551971,
    "time": "2020-06-26T09:40:23Z",
  },
  Object {
    "elevation": 1647.36,
    "lat": 47.0047791582,
    "lng": 8.7596405949,
    "time": "2020-06-26T09:40:51Z",
  },
  Object {
    "elevation": 1639.67,
    "lat": 47.0052356366,
    "lng": 8.7594467215,
    "time": "2020-06-26T09:41:08Z",
  },
  Object {
    "elevation": 1626.69,
    "lat": 47.0055321883,
    "lng": 8.7602207065,
    "time": "2020-06-26T09:41:33Z",
  },
  Object {
    "elevation": 1617.07,
    "lat": 47.0056898519,
    "lng": 8.7595770601,
    "time": "2020-06-26T09:41:42Z",
  },
  Object {
    "elevation": 1594,
    "lat": 47.0052641351,
    "lng": 8.7575960811,
    "time": "2020-06-26T09:42:05Z",
  },
  Object {
    "elevation": 1564.2,
    "lat": 47.0038380381,
    "lng": 8.755794391,
    "time": "2020-06-26T09:45:17Z",
  },
  Object {
    "elevation": 1533.92,
    "lat": 47.003689846,
    "lng": 8.752705073,
    "time": "2020-06-26T09:47:12Z",
  },
  Object {
    "elevation": 1507,
    "lat": 47.0055921189,
    "lng": 8.7482172344,
    "time": "2020-06-26T09:49:00Z",
  },
  Object {
    "elevation": 1501.72,
    "lat": 47.0063056704,
    "lng": 8.747074781,
    "time": "2020-06-26T09:49:41Z",
  },
  Object {
    "elevation": 1510.85,
    "lat": 47.0065877214,
    "lng": 8.7456833012,
    "time": "2020-06-26T09:51:13Z",
  },
  Object {
    "elevation": 1523.35,
    "lat": 47.0077165123,
    "lng": 8.7431168463,
    "time": "2020-06-26T09:52:23Z",
  },
  Object {
    "elevation": 1513.25,
    "lat": 47.0086023118,
    "lng": 8.7419288792,
    "time": "2020-06-26T09:52:49Z",
  },
  Object {
    "elevation": 1479.13,
    "lat": 47.0092364866,
    "lng": 8.7393799424,
    "time": "2020-06-26T09:55:21Z",
  },
  Object {
    "elevation": 1457.02,
    "lat": 47.0094108302,
    "lng": 8.737359317,
    "time": "2020-06-26T09:55:50Z",
  },
  Object {
    "elevation": 1451.73,
    "lat": 47.0091857761,
    "lng": 8.7372621708,
    "time": "2020-06-26T09:55:59Z",
  },
]
`;
